scss/components/_hero.scss
.hero {
  @include container;
  position: relative;
  height: 350px;
  background-image: linear-gradient(rgba($dark, 0.4), rgba($dark, 0.4)),
    url("../images/effeil_tower.jpg");
  background-size: cover;
  background-blend-mode: hard-light;

  &__content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
    z-index: 1;
  }
  &__text {
    font-size: em(30);
    text-shadow: 5px 9px 27px rgba(0, 0, 0, 0.58);
    color: $light;
    line-height: 1em;
    margin-bottom: rem(30);

    strong {
      font-weight: 300;
    }
  }
}

// Desktop
@include responsive-for(large) {
  .hero {
    height: 580px;
    padding-left: rem(125);

    &__content {
      display: block;
      position: absolute;
      top: rem(80);
      max-width: rem(550);
      height: auto;
    }

    &__text {
      font-size: em(65);
      line-height: 1em;
      margin-bottom: rem(55);
    }
  }
}

